force-app/main/default/objects/User/fields/Demo_User__c.field-meta.xml
<CustomField>
    <fullName>Demo_User__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this to set the recruit default User record</inlineHelpText>
    <label>Demo User</label>
    <type>Checkbox</type>
</CustomField>