force-app/main/default/objects/User/fields/Employee_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Employee_Contact_Id__c</fullName>
    <description>Contact ID for the Employee</description>
    <inlineHelpText>This is the Contact ID for this Employee</inlineHelpText>
    <label>Employee Contact Id</label>
    <length>24</length>
    <type>Text</type>
</CustomField>