force-app/main/default/objects/User/fields/Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status__c</fullName>
    <defaultValue>&quot;Active&quot;</defaultValue>
    <label>Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Active_State</valueSetName>
    </valueSet>
</CustomField>