force-app/main/default/objects/User/fields/Onboarding_Demo_User__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Demo_User__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if this user account is used in onboarding demo scenarios</inlineHelpText>
    <label>Onboarding Demo User</label>
    <type>Checkbox</type>
</CustomField>