force-app/main/default/objects/User/fields/Shared_Calendar__c.field-meta.xml
<CustomField>
    <fullName>Shared_Calendar__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check here is this account is used as a shared calendar account</inlineHelpText>
    <label>Shared Calendar</label>
    <type>Checkbox</type>
</CustomField>